[package]
authors = ["Willem Vanhulle <willemvanhulle@protonmail.com>"]
description = "Lazily clone streams."
edition = "2024"
keywords = ["future", "combinator", "stream", "clone", "async"]
license = "MIT"
name = "clone-stream"
repository = "https://github.com/wvhulle/clone-stream"
version = "0.2.1"


[lints.clippy]
cast_possible_truncation = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
pedantic = { level = "warn", priority = 0 }


[dependencies]
futures = "0.3"
log = "0.4"
ringbuf = "0.4"

[dev-dependencies]
env_logger = "0.11.8"
test-log = "0.2.17"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
