[package]
authors = ["Willem Vanhulle <willemvanhulle@protonmail.com>"]
categories = ["asynchronous", "concurrency", "data-structures"]
description = "Turn any Stream into a cloneable stream where each clone receives all items independently."
edition = "2024"
keywords = ["future", "combinator", "stream", "clone", "async"]
license = "MIT"
name = "clone-stream"
readme = "README.md"
repository = "https://github.com/wvhulle/clone-stream"
rust-version = "1.89.0"
version = "0.3.4"


[lints.clippy]
cast_possible_truncation = { level = "allow", priority = 1 }
pedantic = { level = "warn", priority = 0 }


[dependencies]
env_logger = "0.11.8"
futures = "0.3"
log = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"

[[bench]]
harness = false
name = "fork_clone"
